syntax = "proto3";

import "io/timemates/api/authorizations/types/Authorization.proto";

option java_package = "io.timemates.api.users.requests";

message CreateProfileRequest {
  string verificationHash = 1;
  /**
   * User's name
   */
  string name = 2;

  /**
   * User's description.
   */
  optional string description = 3;

  message Response {
    Authorization authorization = 1;
  }
}