syntax = "proto3";

import "io/timemates/api/timers/types/Timer.proto";

option java_package = "io.timemates.api.timers.requests";

message CreateTimerRequest {
  int64 timerId = 1;
  /**
   * Timer's name. Up to 50 symbols.
   */
  string name = 2;

  /**
   * Timer's name. Up to 500 symbols.
   */
  optional string description = 3;

  optional Timer.Settings settings = 4;

  message Response {
    int64 timerId = 1;
  }
}