syntax = "proto3";

import "io/timemates/api/users/requests/GetUsersRequest.proto";
import "io/timemates/api/users/requests/EditUserRequest.proto";
import "io/timemates/api/users/requests/EditEmailRequest.proto";
import "io/timemates/api/users/types/User.proto";
import "google/protobuf/empty.proto";

option java_package = "io.timemates.api.users";

service UsersService {
    /**
     * Gets users by given identifiers.
     *
     * Returns [User] or null
     */
    rpc getUsers(GetUsersRequest) returns (Users);

    /**
     * Sets user information (name / description / avatar file id).
     *
     * Returns [Status]
     */
    rpc setUser(EditUserRequest) returns (google.protobuf.Empty);

    /**
     * Sets new email for current user.
     *
     * Returns [Status]
     */
    rpc setEmail(EditEmailRequest) returns (google.protobuf.Empty);
}