syntax = "proto3";

option java_package = "io.timemates.api.users.requests";

message EditEmailRequest {
  string email = 1;
}