syntax = "proto3";
import "io/timemates/api/authorizations/types/Authorization.proto";

option java_package = "io.timemates.api.authorizations.requests";

message GetAuthorizationsRequest {
  // null if it's start of pagination
  optional string pageToken = 1;

  message Response {
    repeated Authorization authorizations = 1;
    string nextPageToken = 2;
  }
}