syntax = "proto3";

import "io/timemates/api/timers/requests/CreateTimerRequest.proto";
import "io/timemates/api/timers/requests/EditTimerInfoRequest.proto";
import "io/timemates/api/timers/requests/RemoveTimerRequest.proto";
import "io/timemates/api/timers/requests/GetTimerRequest.proto";
import "io/timemates/api/timers/requests/GetTimersRequest.proto";
import "io/timemates/api/timers/members/requests/KickMemberRequest.proto";
import "io/timemates/api/timers/members/requests/GetMembersRequest.proto";
import "io/timemates/api/timers/members/invites/requests/CreateInviteRequest.proto";
import "io/timemates/api/timers/members/invites/requests/GetInvitesRequest.proto";
import "io/timemates/api/timers/members/invites/requests/RemoveInviteRequest.proto";
import "io/timemates/api/timers/types/Timer.proto";
import "google/protobuf/empty.proto";

option java_package = "io.timemates.api.timers";

service TimersService {
  /**
   * Creates timer.
   */
  rpc createTimer(CreateTimerRequest) returns (CreateTimerRequest.Response);

  /**
   * Gets timer by id.
   */
  rpc getTimer(GetTimerRequest) returns (Timer);

  /*
   * Gets timers by page token.
   */
  rpc getTimers(GetTimersRequest) returns (GetTimersRequest.Response);

  /**
   * Edits timer information & settings (name, description).
   */
  rpc editTimer(EditTimerRequest) returns (google.protobuf.Empty);

  /**
   * Kicks member out of timer.
   */
  rpc kickMember(KickMemberRequest) returns (google.protobuf.Empty);

  /*
   * Gets members of a timer.
   */
  rpc getMembers(GetMembersRequest) returns (GetMembersRequest.Response);

  /*
   * Creates invite for joining a timer.
   */
  rpc createInvite(InviteMemberRequest) returns (InviteMemberRequest.Response);

  /**
   * Gets invites of a timer.
   */
  rpc getInvites(GetInvitesRequest) returns (GetInvitesRequest.Response);

  /**
   * Gets invites of a timer.
   */
  rpc removeInvite(RemoveInviteRequest) returns (google.protobuf.Empty);

  /**
   * Removes timer.
   */
  rpc removeTimer(RemoveTimerRequest) returns (google.protobuf.Empty);
}