syntax = "proto3";
import "io/timemates/api/authorizations/types/Authorization.proto";

option java_package = "org.timemates.api.authorizations.requests";

message ConfirmAuthorizationRequest {
  string verificationHash = 1;
  string confirmationCode = 2;

  message Response {
    bool isNewAccount = 1;
    // if it's a new account, there's no authorization returned
    optional Authorization authorization = 2;
  }
}